--- a/clase_21_02_2025/index.html
+++ b/clase_21_02_2025/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sanitización de HTML</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="CSS/estilo.css" />
-    <script src="sanitizar.js" defer></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="estilo.css" />
+    <script src="validar.js" defer></script>
 </head>
 <body>
     <div class="principal">
