--- a/clase_21_02_2025/index.html
+++ b/clase_21_02_2025/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sanitización de HTML</title>
+    <title>ciber2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="estilo.css" />
     <script src="validar.js" defer></script>
