--- a/examen/public/index.html
+++ b/examen/public/index.html
@@ -14,7 +14,8 @@
   <!-- Formulario para agregar Backroom -->
   <form id="formulario-backroom">
     <label for="nivel_backroom">Nivel de Backroom:</label>
-    <input type="text" id="nivel_backroom" name="nivel_backroom" required>
+    <!-- Se cambia a tipo number -->
+    <input type="number" id="nivel_backroom" name="nivel_backroom" min="1" required>
     
     <label for="entidades_presentes">Entidades presentes:</label>
     <input type="text" id="entidades_presentes" name="entidades_presentes">
