--- a/examen/public/index.html
+++ b/examen/public/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1>Registro de Nivel de Backroom</h1>
   
+  <!-- Botón para ir a la página de inicio de sesión -->
+  <button type="button" onclick="window.location.href='/login'" class="btn-login">Iniciar Sesión</button>
+  
   <div id="alerta"></div>
 
   <!-- Formulario para agregar Backroom -->
