--- a/examen/public/register.html
+++ b/examen/public/register.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro de Usuario</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Registro de Usuario</h1>
-  <div id="alerta"></div>
-  <form id="formulario-register" method="POST" action="/register">
+  <form id="formulario-register">
     <label for="username">Usuario:</label>
     <input type="text" id="username" name="username" required>
     
@@ -17,11 +17,8 @@
     
     <input type="submit" value="Registrar">
   </form>
-  
+  <div id="alerta"></div>
   <p>¿Ya tienes una cuenta? <a href="/login">Inicia sesión aquí</a></p>
-  
-  <script>
-    // Aquí puedes agregar validaciones adicionales en el cliente si lo deseas.
-  </script>
+  <script src="register.js"></script>
 </body>
 </html>
